syntax = "proto3";

package types.v1;

option go_package = "types/v1;typesv1";

import "types/v1/path.proto";
import "google/protobuf/timestamp.proto";

message File {
  types.v1.FileInfo info = 1;
  bytes content = 2;
}

message FileInfo {
  string name = 1;
  uint64 size = 2;
  uint32 mode = 3;
  google.protobuf.Timestamp mod_time = 4;
  bool is_dir = 5;
}

message FileSum {
  types.v1.FileInfo info = 1;
  uint32 block_size = 2;
  repeated types.v1.FileSumBlock sum_blocks = 3;
}

message FileSumBlock {
  uint32 fast_sig = 1; // buzhash
  Uint256 strong_sig = 2; // blake3 sum256 (32 bytes)
  uint32 size = 3;
}

message FilePatch {
  types.v1.FileInfo info = 1;
  repeated types.v1.FileBlockPatch blocks = 2;
}

message FileBlockPatch {
  oneof patch {
    uint32 block_id = 1; // ID of the block with the data
    bytes data = 2; // actual data to add
  }
}

message Uint256 {
  uint64 a = 1;
  uint64 b = 2;
  uint64 c = 3;
  uint64 d = 4;
}